--- a/frontend/tuiasi/src/Dashboard/Dashboard.css
+++ b/frontend/tuiasi/src/Dashboard/Dashboard.css
@@ -3,20 +3,37 @@
     flex-wrap: wrap;
     width: 100%;
     font-family: sans-serif;
-    border: 4px solid #e6e6e6;
+    border: 1px solid #e6e6e6;
     position: relative;
+    border-radius: 5px;
+}
+
+a {
+    cursor: pointer;
 }
 
 .calendar a {
     color: grey;
 }
 
+.cell:nth-child(44) {
+    border-bottom-left-radius: 5px;
+}
+
+.cell:nth-child(50) {
+    border-bottom-right-radius: 5px;
+}
+
 .cell {
     background: #fffeee;
     width: 14.2857%;
-    height: 90px;
     font-size: 0.7em;
     box-shadow: 0 0px 1px #393939;
+    padding-bottom: 1%;
+}
+
+.cell:not(:nth-child(-n+8)) {
+    min-height: 90px;
 }
 
 .cell .date {
@@ -51,10 +68,15 @@
 
 .miniEvent {
     background: #1f86ef;
+    border-style: groove;
+    border-color: black;
+    border-width: 1px;
     color: white;
     padding: 3px;
     font-size: 1em;
     cursor: pointer;
+    /* margin-left: 5%;
+    margin-right: 5%; */
 }
 
 .miniEvent.holiday {
@@ -85,7 +107,7 @@
     text-decoration: none;
     display: inline-block;
     padding: 0 10px;
-    background: #27bc27;
+    background: #2196f3;
     border-radius: 5px;
     color: white;
     margin-left: 10px;
