--- a/frontend/tuiasi/src/Dashboard/Dashboard.css
+++ b/frontend/tuiasi/src/Dashboard/Dashboard.css
@@ -8,6 +8,10 @@
     border-radius: 5px;
 }
 
+.d-flex {
+    display: flex;
+}
+
 a {
     cursor: pointer;
 }
@@ -16,6 +20,8 @@ a {
     color: grey;
 }
 
+
+/*
 .cell:nth-child(44) {
     border-bottom-left-radius: 5px;
 }
@@ -23,9 +29,10 @@ a {
 .cell:nth-child(50) {
     border-bottom-right-radius: 5px;
 }
+*/
 
 .cell {
-    background: #fffeee;
+    background: #eef9ff;
     width: 14.2857%;
     font-size: 0.7em;
     box-shadow: 0 0px 1px #393939;
@@ -66,11 +73,26 @@ a {
     border-radius: 3px;
 }
 
+.legend {
+    padding: 8px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.legendSquare {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
+.legendItem {
+    display: flex;
+    align-items: center;
+}
+
 .miniEvent {
-    background: #1f86ef;
-    border-style: groove;
-    border-color: black;
-    border-width: 1px;
+    background: #2196f3;
     color: white;
     padding: 3px;
     font-size: 1em;
@@ -79,18 +101,25 @@ a {
     margin-right: 5%; */
 }
 
-.miniEvent.holiday {
+.miniEvent:not(:nth-child(-n + 2)) {
+    border-top: 1px solid #d1dadf;
+}
+
+.aprobata {
     background: #3fb73f;
 }
 
-.miniEvent.busy {
-    background: #e7713c;
+.in_verificare {
+    background: #ffb649;
+}
+
+.respinsa {
+    background: #6e6e6e;
 }
 
 .navigation {
     width: 100%;
     padding: 10px 8px 14px 8px;
-    border-bottom: 3px solid #b3b3b3;
 }
 
 .navigation div {
@@ -134,8 +163,8 @@ a {
     text-align: center;
     height: auto;
     padding: 10px 0;
-    background: #e9e9e9;
-    border-bottom: 3px solid #cacaca;
+    background: #2196f3;
+    color: white
 }
 
 .addEvent {
@@ -150,12 +179,12 @@ a {
     padding: 10px;
 }
 
-.form input,
+.form .custom-input,
 .form select {
     width: calc(100% - 16px);
     padding: 5px;
     margin: 6px 0 10px 0;
-    border: 3px solid #cacaca;
+    border: 1px solid #cacaca;
     border-radius: 4px;
     background: #f9f9f9;
 }
@@ -171,11 +200,11 @@ a {
     display: block;
 }
 
-button {
+.custom-button {
     width: 100%;
-    background: #3fb73f;
+    background: #2196f3;
     border: 0;
-    border-bottom: 3px solid green;
+    border-bottom: 3px solid rgb(26, 105, 170);
     color: white;
     padding: 10px;
     cursor: pointer;
@@ -194,6 +223,7 @@ button.red {
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
 
 .modal {
